2023-09-30T08:10:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6361437568 # 1941
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-30
* notice: last 14d: unq all: 91 315
* notice: prev accum: outdated-unq outdated-all / unq all: 1578 5078 / 1702 5345
* notice: next accum: outdated-unq outdated-all / unq all: 1578 5078 / 1714 5394
* notice: prev exec diff / last date diff / accum: unq all: +12 +49 -1 -1 / +12 +49 -0 -0 / 12 49
* notice: removed / changed dates: [] / [2023-09-16 2023-09-30]

2023-09-30T00:42:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6358811786 # 1940
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-30
* notice: last 14d: unq all: 87 267
* notice: prev accum: outdated-unq outdated-all / unq all: 1577 5077 / 1696 5336
* notice: next accum: outdated-unq outdated-all / unq all: 1578 5078 / 1702 5345
* notice: prev exec diff / last date diff / accum: unq all: +6 +9 -0 -0 / +10 +35 -0 -0 / 10 35
* notice: removed / changed dates: [2023-09-15] / [2023-09-29]

2023-09-29T08:12:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6348791988 # 1938
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-29
* notice: last 14d: unq all: 83 259
* notice: prev accum: outdated-unq outdated-all / unq all: 1577 5077 / 1692 5310
* notice: next accum: outdated-unq outdated-all / unq all: 1577 5077 / 1696 5336
* notice: prev exec diff / last date diff / accum: unq all: +4 +26 -0 -0 / +4 +26 -0 -0 / 4 26
* notice: removed / changed dates: [] / [2023-09-29]

2023-09-29T00:43:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6345780334 # 1937