@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-30T08:10:36Z",
-  "count" : 49,
-  "count_minmax" : [ 49, 49 ],
-  "count_decinc" : [ -0, +49 ],
-  "uniques" : 12,
-  "uniques_minmax" : [ 12, 12 ],
-  "uniques_decinc" : [ -0, +12 ]
+  "timestamp" : "2023-10-01T00:50:36Z",
+  "count" : 56,
+  "count_minmax" : [ 49, 56 ],
+  "count_decinc" : [ -0, +56 ],
+  "uniques" : 17,
+  "uniques_minmax" : [ 12, 17 ],
+  "uniques_decinc" : [ -0, +17 ]
 }
