@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-30T08:10:36Z",
-  "count_outdated" : 5078,
-  "uniques_outdated" : 1578,
-  "count" : 5394,
-  "uniques" : 1714,
+  "timestamp" : "2023-10-01T00:50:36Z",
+  "count_outdated" : 5140,
+  "uniques_outdated" : 1589,
+  "count" : 5401,
+  "uniques" : 1719,
   "clones" : [
-    {
-      "timestamp": "2023-09-16T00:00:00Z",
-      "count": 61,
-      "count_minmax": [ 1, 62 ],
-      "count_decinc": [ 1, 62 ],
-      "uniques": 10,
-      "uniques_minmax": [ 1, 11 ],
-      "uniques_decinc": [ 1, 11 ]
-    },
     {
       "timestamp": "2023-09-17T00:00:00Z",
       "count": 13,
@@ -133,12 +124,12 @@
     },
     {
       "timestamp": "2023-09-30T00:00:00Z",
-      "count": 49,
-      "count_minmax": [ 49, 49 ],
-      "count_decinc": [ 0, 49 ],
-      "uniques": 12,
-      "uniques_minmax": [ 12, 12 ],
-      "uniques_decinc": [ 0, 12 ]
+      "count": 56,
+      "count_minmax": [ 49, 56 ],
+      "count_decinc": [ 0, 56 ],
+      "uniques": 17,
+      "uniques_minmax": [ 12, 17 ],
+      "uniques_decinc": [ 0, 17 ]
     }
   ]
 }
