@@ -1,12 +1,7 @@
 {
-  "count": 315,
-  "uniques": 91,
+  "count": 261,
+  "uniques": 89,
   "clones": [
-    {
-      "timestamp": "2023-09-16T00:00:00Z",
-      "count": 61,
-      "uniques": 10
-    },
     {
       "timestamp": "2023-09-17T00:00:00Z",
       "count": 13,
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2023-09-30T00:00:00Z",
-      "count": 49,
-      "uniques": 12
+      "count": 56,
+      "uniques": 17
     }
   ]
 }
