@@ -1,3 +1,12 @@
+2023-10-01T00:50:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6366791765 # 1943
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-01
+* notice: last 14d: unq all: 89 261
+* notice: prev accum: outdated-unq outdated-all / unq all: 1578 5078 / 1714 5394
+* notice: next accum: outdated-unq outdated-all / unq all: 1589 5140 / 1719 5401
+* notice: prev exec diff / last date diff / accum: unq all: +5 +7 -0 -0 / +17 +56 -0 -0 / 17 56
+* notice: removed / changed dates: [2023-09-16] / [2023-09-30]
+
 2023-09-30T08:10:36Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6361437568 # 1941
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-30
